data/derived/comb/progs/unify/prog1667.ml.out
Characters 564-568:
  | _ -> abs next);;
             ^^^^
Error: This expression has type expr but an expression was expected of type
         int
